--- a/clients/WinForms/WindowsFormsClient/WindowsFormsClient.csproj
+++ b/clients/WinForms/WindowsFormsClient/WindowsFormsClient.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{FFFAF55A-1B95-4BA1-9806-1A8C6EC83119}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>WindowsFormsClient</RootNamespace>
-    <AssemblyName>OpenWasher Client</AssemblyName>
+    <AssemblyName>WindowsFormsClient</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -144,9 +144,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Localization_Ru-Ru\Localization_Ru-Ru.csproj">
+    <ProjectReference Include="..\Localization_Ru-Ru\Localization_ru-RU.csproj">
       <Project>{b64ddaae-77cc-4228-934d-508aa977664b}</Project>
-      <Name>Localization_Ru-Ru</Name>
+      <Name>Localization_ru-RU</Name>
     </ProjectReference>
     <ProjectReference Include="..\OpenWasherHardwareLibrary\OpenWasherHardwareLibrary.csproj">
       <Project>{a3b97f4c-3d1a-4e87-9cac-91ea773a9ac6}</Project>
