--- a/clients/WinForms/WindowsFormsClient/WindowsFormsClient.csproj
+++ b/clients/WinForms/WindowsFormsClient/WindowsFormsClient.csproj
@@ -99,6 +99,9 @@
     <Compile Include="Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
+    <Compile Include="Main.States.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Main.WasherHandlers.cs">
       <SubType>Form</SubType>
     </Compile>
