--- a/firmware/.settings/org.eclipse.cdt.core.prefs
+++ b/firmware/.settings/org.eclipse.cdt.core.prefs
@@ -1,3 +1,8 @@
+doxygen/doxygen_new_line_after_brief=true
+doxygen/doxygen_use_brief_tag=false
+doxygen/doxygen_use_javadoc_tags=true
+doxygen/doxygen_use_pre_tag=false
+doxygen/doxygen_use_structural_commands=false
 eclipse.preferences.version=1
 environment/project/ilg.gnuarmeclipse.managedbuild.cross.config.elf.debug.492095882/PATH/delimiter=;
 environment/project/ilg.gnuarmeclipse.managedbuild.cross.config.elf.debug.492095882/PATH/operation=replace
