--- a/clients/Flutter/openwasher/pubspec.yaml
+++ b/clients/Flutter/openwasher/pubspec.yaml
@@ -19,15 +19,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   shared_preferences: ^0.4.3
   flutter_bluetooth_serial: ^0.2.2
   numberpicker: ^1.2.0
   mutex: ^1.0.3
-  
+  intl: ^0.16.0
+  flutter_local_notifications: ^1.4.1
+  permission_handler: ^5.0.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  flutter_i18n: ^0.13.0
+  rxdart: ^0.24.0
 
 dev_dependencies:
   flutter_test:
@@ -40,11 +47,9 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/flutter_i18n/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
