--- a/clients/Flutter/openwasher/pubspec.yaml
+++ b/clients/Flutter/openwasher/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   flutter_i18n: ^0.13.0
   rxdart: ^0.24.0
+  url_launcher: ^5.4.10
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +51,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/flutter_i18n/
+    
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
